--- a/package.json
+++ b/package.json
@@ -115,6 +115,8 @@
     "sass-loader": "^7.0.3",
     "spectron": "^3.8.0",
     "style-loader": "^0.21.0",
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.9.2",
     "url-loader": "^1.0.1",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.2.4",
