--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
     }
   },
   "dependencies": {
-    "vue": "^2.5.16",
     "axios": "^0.18.0",
+    "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
+    "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2",
     "vuex-electron": "^1.0.0"
   },
   "devDependencies": {
