--- a/package.json
+++ b/package.json
@@ -57,11 +57,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "iview": "^3.5.4",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
+    "vuex": "^3.4.0",
     "vuex-class": "^0.3.2",
     "vuex-electron": "^1.0.0"
   },
@@ -76,7 +77,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "cfonts": "^2.1.2",
+    "cfonts": "^2.8.2",
     "chai": "^4.1.2",
     "chalk": "^2.4.1",
     "copy-webpack-plugin": "^4.5.1",
@@ -112,7 +113,7 @@
     "mocha": "^5.2.0",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.14.1",
     "require-dir": "^1.0.0",
     "sass-loader": "^7.0.3",
     "spectron": "^3.8.0",
@@ -121,12 +122,12 @@
     "typescript": "^3.9.2",
     "url-loader": "^1.0.1",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.2.4",
+    "vue-loader": "^15.9.2",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
+    "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3"
   }
