--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "codemirror": "^5.53.2",
     "iview": "^3.5.4",
     "vue": "^2.5.16",
+    "vue-codemirror": "^4.0.6",
     "vue-electron": "^1.0.6",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.0.1",
