--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     }
   },
   "dependencies": {
+    "@types/codemirror": "0.0.95",
     "axios": "^0.18.0",
     "codemirror": "^5.53.2",
     "iview": "^3.5.4",
