--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "iview": "^3.5.4",
     "vue": "^2.5.16",
     "vue-codemirror": "^4.0.6",
+    "vue-codemirror-lite": "^1.0.4",
     "vue-electron": "^1.0.6",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.0.1",
@@ -133,5 +134,10 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3"
+  },
+  "electronWebpack": {
+    "whiteListedModules": [
+      "vue-codemirror"
+    ]
   }
 }
