--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
       "icon": "build/icons/icon.icns"
     },
     "win": {
-      "icon": "build/icons/icon.ico"
+      "icon": "build/icons/icon.ico",
+      "target": ["portable"]
     },
     "linux": {
       "icon": "build/icons"
