--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     },
     "win": {
       "icon": "build/icons/icon.ico",
-      "target": ["portable"]
+      "target": [
+        "portable"
+      ]
     },
     "linux": {
       "icon": "build/icons"
@@ -60,6 +62,7 @@
     "@types/codemirror": "0.0.95",
     "axios": "^0.18.0",
     "codemirror": "^5.53.2",
+    "ipc-promise": "^0.1.4",
     "iview": "^3.5.4",
     "vue": "^2.5.16",
     "vue-codemirror": "^4.0.6",
