--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "codemirror": "^5.53.2",
     "ipc-promise": "^0.1.4",
     "iview": "^3.5.4",
+    "save": "^2.4.0",
     "vue": "^2.5.16",
     "vue-codemirror": "^4.0.6",
     "vue-codemirror-lite": "^1.0.4",
@@ -72,7 +73,10 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.4.0",
     "vuex-class": "^0.3.2",
-    "vuex-electron": "^1.0.0"
+    "vuex-electron": "^1.0.0",
+    "xterm": "^3.14.5",
+    "xterm-addon-fit": "^0.1.0",
+    "xterm-addon-web-links": "^0.1.0"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
